Revise birthday message and enhance styles
Updated birthday message and improved styling.

--- a/birthday.html
+++ b/birthday.html
@@ -185,9 +185,9 @@
     </div>
 
     <div class="message" id="message">
-        Wishing you an amazing start to adulthood 🎉  
+        I hope your day is filled with smiles, cake, and all the little things that make you happy.   
         <br>
-        May this year be full of new adventures!
+        Wishing you a year as lovely as your smile 💫
     </div>
 
     <div class="hint">(tap the cake to blow all 18 candles)</div>
@@ -274,6 +274,7 @@
 </script>
 </body>
 </html>
+
 
 
 
