Fix HTML encoding issues in birthday.html

--- a/birthday.html
+++ b/birthday.html
@@ -135,7 +135,10 @@
         position: absolute;
         width: 8px;
         height: 8px;
+        border-radius: 2px;
         animation: fall 3s linear forwards;
+        pointer-events: none;
+        z-index: 1;
     }
 
     @keyframes fall {
@@ -274,6 +277,7 @@
 </script>
 </body>
 </html>
+
 
 
 
