--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
         background: radial-gradient(circle, #ffd166, #ff8500);
         border-radius: 50%;
         animation: flicker 0.2s infinite alternate;
+        transition: 300ms ease-in-out;
     }
 
     @keyframes flicker {
@@ -284,6 +285,7 @@ flames.forEach((flame, i) => setTimeout(() => flame.classList.add("blown"), 50 *
 </script>
 </body>
 </html>
+
 
 
 
